// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelColor should match snapshot 1`] = `
<PanelBody
  title={
    Array [
      <span
        className="components-panel__color-title"
      >
        sample title
      </span>,
      <span
        className="components-panel__color-area"
        style={
          Object {
            "background": "red",
          }
        }
      />,
    ]
  }
/>
`;

exports[`PanelColor should match snapshot when colorValue is empty 1`] = `
<PanelBody
  title={
    Array [
      <span
        className="components-panel__color-title"
      />,
      <span
        className="components-panel__color-area"
        style={
          Object {
            "background": "red",
          }
        }
      />,
    ]
  }
/>
`;
